<?xml version="1.0" encoding="utf-8"?>
<!--
 COPYRIGHT (C) 2017
 TOSHIBA CORPORATION STORAGE & ELECTRONIC DEVICES SOLUTIONS COMPANY
 ALL RIGHTS RESERVED

 THE SOURCE CODE AND ITS RELATED DOCUMENTATION IS PROVIDED "AS IS". TOSHIBA
 CORPORATION MAKES NO OTHER WARRANTY OF ANY KIND, WHETHER EXPRESS, IMPLIED OR,
 STATUTORY AND DISCLAIMS ANY AND ALL IMPLIED WARRANTIES OF MERCHANTABILITY,
 SATISFACTORY QUALITY, NON INFRINGEMENT AND FITNESS FOR A PARTICULAR PURPOSE.

 THE SOURCE CODE AND DOCUMENTATION MAY INCLUDE ERRORS. TOSHIBA CORPORATION
 RESERVES THE RIGHT TO INCORPORATE MODIFICATIONS TO THE SOURCE CODE IN LATER
 REVISIONS OF IT, AND TO MAKE IMPROVEMENTS OR CHANGES IN THE DOCUMENTATION OR
 THE PRODUCTS OR TECHNOLOGIES DESCRIBED THEREIN AT ANY TIME.

 TOSHIBA CORPORATION SHALL NOT BE LIABLE FOR ANY DIRECT, INDIRECT OR
 CONSEQUENTIAL DAMAGE OR LIABILITY ARISING FROM YOUR USE OF THE SOURCE CODE OR
 ANY DOCUMENTATION, INCLUDING BUT NOT LIMITED TO, LOST REVENUES, DATA OR
 PROFITS, DAMAGES OF ANY SPECIAL, INCIDENTAL OR CONSEQUENTIAL NATURE, PUNITIVE
 DAMAGES, LOSS OF PROPERTY OR LOSS OF PROFITS ARISING OUT OF OR IN CONNECTION
 WITH THIS AGREEMENT, OR BEING UNUSABLE, EVEN IF ADVISED OF THE POSSIBILITY OR
 PROBABILITY OF SUCH DAMAGES AND WHETHER A CLAIM FOR SUCH DAMAGE IS BASED UPON
 WARRANTY, CONTRACT, TORT, NEGLIGENCE OR OTHERWISE.
-->

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:baselineAligned="false"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:scrollbarAlwaysDrawVerticalTrack="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:background="#FFEFD5"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                style="@style/TxtView_Basic"
                android:text="@string/str_step1"
                android:textColor="#FF600000"/>

            <TextView
                style="@style/TxtView_Basic"
                android:text="@string/str_read_firmware_revision"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_ReadHwRevOta"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/str_Read"
                android:textAllCaps="false"/>

            <TextView
                android:id="@+id/txtVw_ReadHwRevOta"
                style="@style/TxtView_Basic"
                android:text="@string/str_defaultValue"/>

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:background="#FFF0FFF0"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical">

            <TextView
                style="@style/TxtView_Basic"
                android:text="@string/str_step2"
                android:textColor="#FF600000"/>

            <TextView
                style="@style/TxtView_Basic"
                android:text="@string/str_choose_ota_file"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:layout_marginBottom="3dp"
            android:padding="2dp">

            <Button
                android:id="@+id/btn_SetFile"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/str_SetFile"
                android:textAllCaps="false"/>

            <TextView
                android:id="@+id/txtVw_SelectFile"
                style="@style/TxtView_Basic"
                android:text="@string/str_SetFileComment"/>
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:background="#FFF0FFFF"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical">

            <TextView
                style="@style/TxtView_Basic"
                android:text="@string/str_step3"
                android:textColor="#FF600000"/>

            <TextView
                style="@style/TxtView_Basic"
                android:text="@string/str_start_ota"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical">

            <Button
                android:id="@+id/btn_Start_Flash"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:layout_weight="7"
                android:text="@string/str_ota_flash_start"
                android:textAllCaps="false"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:orientation="vertical">

                <TextView
                    style="@style/TxtView_Basic"
                    android:text="@string/str_result"/>

                <TextView
                    android:id="@+id/txtVw_otaResult_Flash"
                    style="@style/TxtView_Basic"
                    android:text="@string/str_defaultValue"
                    android:textColor="#FFA00000"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:background="#FFFACD"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical">

            <TextView
                style="@style/TxtView_Basic"
                android:text="@string/str_step4"
                android:textColor="#FF600000"/>

            <TextView
                style="@style/TxtView_Basic"
                android:text="@string/str_disconnect_and_reboot_device"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:layout_marginBottom="3dp"
            android:padding="2dp">

            <Button
                android:id="@+id/btn_DisconnectOta"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/str_Disconnect"
                android:textAllCaps="false"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    style="@style/TxtView_Basic"
                    android:text="@string/str_status"/>

                <TextView
                    android:id="@+id/txtVw_otaStatus"
                    style="@style/TxtView_Basic"
                    android:text="@string/str_defaultValue"
                    android:textColor="#FFA00000"/>
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>