<?xml version="1.0" encoding="utf-8"?>
<!--
 COPYRIGHT (C) 2017
 TOSHIBA CORPORATION STORAGE & ELECTRONIC DEVICES SOLUTIONS COMPANY
 ALL RIGHTS RESERVED

 THE SOURCE CODE AND ITS RELATED DOCUMENTATION IS PROVIDED "AS IS". TOSHIBA
 CORPORATION MAKES NO OTHER WARRANTY OF ANY KIND, WHETHER EXPRESS, IMPLIED OR,
 STATUTORY AND DISCLAIMS ANY AND ALL IMPLIED WARRANTIES OF MERCHANTABILITY,
 SATISFACTORY QUALITY, NON INFRINGEMENT AND FITNESS FOR A PARTICULAR PURPOSE.

 THE SOURCE CODE AND DOCUMENTATION MAY INCLUDE ERRORS. TOSHIBA CORPORATION
 RESERVES THE RIGHT TO INCORPORATE MODIFICATIONS TO THE SOURCE CODE IN LATER
 REVISIONS OF IT, AND TO MAKE IMPROVEMENTS OR CHANGES IN THE DOCUMENTATION OR
 THE PRODUCTS OR TECHNOLOGIES DESCRIBED THEREIN AT ANY TIME.

 TOSHIBA CORPORATION SHALL NOT BE LIABLE FOR ANY DIRECT, INDIRECT OR
 CONSEQUENTIAL DAMAGE OR LIABILITY ARISING FROM YOUR USE OF THE SOURCE CODE OR
 ANY DOCUMENTATION, INCLUDING BUT NOT LIMITED TO, LOST REVENUES, DATA OR
 PROFITS, DAMAGES OF ANY SPECIAL, INCIDENTAL OR CONSEQUENTIAL NATURE, PUNITIVE
 DAMAGES, LOSS OF PROPERTY OR LOSS OF PROFITS ARISING OUT OF OR IN CONNECTION
 WITH THIS AGREEMENT, OR BEING UNUSABLE, EVEN IF ADVISED OF THE POSSIBILITY OR
 PROBABILITY OF SUCH DAMAGES AND WHETHER A CLAIM FOR SUCH DAMAGE IS BASED UPON
 WARRANTY, CONTRACT, TORT, NEGLIGENCE OR OTHERWISE.
-->

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:focusableInTouchMode="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="#FFEAEAEA" >

        <RadioGroup
            android:id="@+id/rdGroup_Msg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/rdBtn_ConsoleT1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/str_example1"/>

            <RadioButton
                android:id="@+id/rdBtn_ConsoleT2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/str_example2"/>

            <RadioButton
                android:id="@+id/rdBtn_ConsoleT3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/str_example3"/>

            <RadioButton
                android:id="@+id/rdBtn_Msg_Edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/str_EnterMsg"
                android:textColor="#FF808080"/>
        </RadioGroup>

        <EditText
            android:id="@+id/editTxt_Message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="?android:attr/colorBackground"
            android:hint="@string/str_hint3"
            android:inputType="textVisiblePassword"
            android:maxLength="16"/>

        <Space
            android:layout_width="wrap_content"
            android:layout_height="5dp" />
    </LinearLayout>

    <Space
        android:layout_width="wrap_content"
        android:layout_height="10dp" />

    <Button
        android:id="@+id/btn_SendMsg"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/str_SendMsg"
        android:textAllCaps="false"/>

    <Space
        android:layout_width="wrap_content"
        android:layout_height="5dp" />

    <TextView
        android:id="@+id/txtViewMsgResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="12sp"
        android:textColor="#FF600000"
        android:text="@string/str_defaultValue" />

</LinearLayout>
